<resources>
    <string name="app_name">ShoppingApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Sign in</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">

Email
</string>
    <string name="already_hav">

Already have an account?
</string>
    <string name="log_in">

Log in
</string>
    <string name="sign_in_wit">

Sign in with Google
</string>
    <string name="sign_in_apple">

Sign in with Apple
</string>
    <string name="welcome_back">

Welcome back
</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="ok">Okay</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_cart">Cart</string>
    <string name="title_chat">Chat</string>
    <string name="title_profile">Profile</string>
    <string name="change_photo">Change photo</string>
    <string name="upload_item">Upload item</string>
    <string name="satria_adhi">Satria Adhi Pradana</string>
    <string name="trade_store">Trade store</string>
    <string name="payment_method">Payment_method</string>
    <string name="balance">Balance</string>
    <string name="some_id">$ 1593</string>
    <string name="trade_history">Trade history</string>
    <string name="restore_purchase">Restore purchase</string>
    <string name="help">Help</string>
    <string name="logout">Log out</string>
    <string name="trade_by_bata">
        <font color="#000000">Trade by </font>
        <font color="#4E55D7">bata</font>
</string>
    <string name="location">Location</string>
    <string name="search_hint">What are you looking for?</string>
    <string name="title_activity_search">Search</string>
    <string name="phones">Phones</string>
    <string name="headphones">Headphones</string>
    <string name="kids">Kids</string>
    <string name="cars">Cars</string>
    <string name="furniture">Furniture</string>
    <string name="games">Games</string>
    <string name="samsung_s10">Samsung S10</string>
    <string name="tv_price">$ %s</string>
    <string name="flash_sale_price">$ %s</string>
    <string name="tv_discount">%s%% off</string>
    <string name="latest">Latest</string>
    <string name="view_all">View all</string>
    <string name="already_exist">Account already exists</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="doesnt_exist">Account doesn\'t exist</string>
    <string name="set_user_name">%s %s</string>
    <string name="full_image_of_the_product">Full image of the product</string>
    <string name="new_balance">New balance Sneakers</string>
    <string name="details_description">Features waterproof, fire, air resistant shoes. all changed when the country of fire attacked</string>
    <string name="reviews">(%d reviews)</string>
    <string name="color">Color</string>
    <string name="quantity">Quantity:</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="total_price">#%d</string>
    <string name="add_to_cart">ADD TO CART</string>
</resources>