<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mobile_navigation"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_home">
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.brujiyaseer.shoppingapp.presentation.destinations.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_profile"
            app:destination="@id/navigation_profile" />
    </fragment>

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.brujiyaseer.shoppingapp.presentation.destinations.favorites.FavoritesFragment"
        android:label="@string/title_favorites"
        tools:layout="@layout/fragment_favorites" />

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.brujiyaseer.shoppingapp.presentation.destinations.cart.CartFragment"
        android:label="@string/title_cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.brujiyaseer.shoppingapp.presentation.destinations.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.brujiyaseer.shoppingapp.presentation.destinations.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile"
        >
        <action
            android:id="@+id/action_navigation_profile_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

</navigation>