<?xml version="1.0" encoding="utf-8"?>
<navigation
    android:id="@+id/navigation_start"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <fragment
        android:id="@+id/navigation_sign_in"
        android:name="com.brujiyaseer.shoppingapp.presentation.authentication.SignInFragment"
        android:label="@string/sign_in"
        tools:layout="@layout/fragment_sign_in">
        <action
            android:id="@+id/action_navigation_sign_in_to_navigation_login2"
            app:destination="@id/navigation_login" />
        <action
            android:id="@+id/action_navigation_sign_in_to_navigation_main"
            app:destination="@id/navigation_main" />
    </fragment>

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.brujiyaseer.shoppingapp.presentation.authentication.LoginFragment"
        android:label="@string/log_in"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_navigation_login_to_navigation_main"
            app:destination="@id/navigation_main" />
    </fragment>

   <fragment
       android:id="@+id/navigation_main"
       android:name="com.brujiyaseer.shoppingapp.presentation.destinations.ContentMainFragment"
       android:label="@string/app_name"
       tools:layout="@layout/app_bar_main">
       <action
           android:id="@+id/action_navigation_main_to_navigation_sign_in"
           app:destination="@id/navigation_sign_in" />
       <action
           android:id="@+id/action_navigation_main_to_navigation_search"
           app:destination="@id/navigation_search" />
   </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.brujiyaseer.shoppingapp.presentation.destinations.search.FragmentSearch"
        android:label="@string/title_activity_search"
        tools:layout="@layout/fragment_search" >
        <action
            android:id="@+id/action_navigation_search_to_navigation_main"
            app:destination="@id/navigation_main" />
    </fragment>
</navigation>