<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.authentication.LoginFragment">

    <TextView
        android:id="@+id/welcome_back"
        android:layout_width="199dp"
        android:layout_height="34dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="88dp"
        android:layout_marginTop="129dp"
        android:gravity="top"
        android:text="@string/welcome_back"
        android:textAppearance="@style/welcome_back" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/first_name"
        android:layout_width="289dp"
        android:layout_height="29dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="44dp"
        android:layout_marginTop="235dp"
        android:background="@drawable/rectangle_2"
        android:gravity="center"
        android:hint="@string/first_name"
        android:textAppearance="@style/first_name" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="289dp"
        android:layout_height="29dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="43dp"
        android:layout_marginTop="299dp"
        android:background="@drawable/rectangle_2"
        android:hint="@string/password"
        app:boxStrokeWidth="0dp"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textAppearance="@style/first_name" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="289dp"
        android:layout_height="46dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="43dp"
        android:layout_marginTop="427dp"
        android:background="@drawable/button"
        android:text="@string/login"
        android:textAppearance="@style/sign_in_btn" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>