<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.destinations.home.HomeFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:src="@drawable/ic_menu" />

            <TextView
                android:id="@+id/text_home"
                android:layout_width="144dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="83dp"
                android:text="@string/trade_by_bata"
                android:textAppearance="@style/trade_by_bata" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:orientation="vertical">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/profile_image"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="top|center"
                    android:src="@drawable/profile_picture"
                    app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
                    app:strokeColor="@color/black"
                    app:strokeWidth="1dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:text="@string/location"
                        android:textAppearance="@style/already_hav" />

                    <ImageView
                        android:layout_width="12dp"
                        android:layout_height="12dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_baseline_keyboard_arrow_down_24" />
                </LinearLayout>
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/tv_search"
            android:layout_width="262dp"
            android:layout_height="24dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/search_view"
            android:text="@string/search_hint"
            android:textAppearance="@style/what_are_yo"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="@+id/app_bar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_bar"
            app:drawableEndCompat="@drawable/ic_baseline_search_24" />

    <LinearLayout
        android:id="@+id/icon_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="127dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phones"
        android:layout_weight="1"
        android:gravity="center"
        android:textAppearance="@style/home_icons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:drawableTopCompat="@drawable/credit_card_background" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/headphones"
        android:layout_weight="1"
        android:gravity="center"
        android:textAppearance="@style/home_icons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:drawableTopCompat="@drawable/ic_headphones_background" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/games"
        android:layout_weight="1"
        android:gravity="center"
        android:textAppearance="@style/home_icons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:drawableTopCompat="@drawable/ic_games_background" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cars"
        android:layout_weight="1"
        android:gravity="center"
        android:textAppearance="@style/home_icons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:drawableTopCompat="@drawable/ic_cars_background" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/furniture"
        android:layout_weight="1"
        android:gravity="center"
        android:textAppearance="@style/home_icons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:drawableTopCompat="@drawable/ic_furniture_background" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kids"
        android:layout_weight="1"
        android:gravity="center"
        android:textAppearance="@style/home_icons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:drawableTopCompat="@drawable/ic_kids_background" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icon_container"
        tools:listitem="@layout/item_goods_section"
        android:layout_marginTop="8dp" />

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>