<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.destinations.profile.ProfileFragment">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="39dp"
        android:background="@drawable/ic_baseline_arrow_back_24"
        android:gravity="center_horizontal|top" />

    <TextView
        android:id="@+id/profile"
        android:layout_width="55dp"
        android:layout_height="18dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="163dp"
        android:layout_marginTop="39dp"
        android:gravity="center_horizontal|top"
        android:text="@string/title_profile"
        android:textAppearance="@style/profile" />

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="61.06dp"
        android:layout_height="61.06dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="157dp"
        android:layout_marginTop="72dp"
        android:src="@drawable/profile_picture"
        app:shapeAppearanceOverlay="@style/roundedImageViewRounded"
        app:strokeWidth="1dp" />

    <TextView
        android:id="@+id/change_photo"
        android:layout_width="69dp"
        android:layout_height="10dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="153dp"
        android:layout_marginTop="139dp"
        android:gravity="center_horizontal|top"
        android:text="@string/change_photo"
        android:textAppearance="@style/change_photo" />

    <TextView
        android:id="@+id/tv_fullName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="166dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal|top"
        android:text="@string/satria_adhi"
        android:textAppearance="@style/satria_adhi" />

    <Button
        android:id="@+id/btn_share"
        android:layout_width="290dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="218dp"
        android:background="@drawable/upload_background"
        android:drawableLeft="@drawable/ic_baseline_ios_share_24"
        android:text="@string/upload_item"
        android:textAppearance="@style/sign_in_btn" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="272dp"
        android:src="@drawable/ic_baseline_credit_card_24" />

    <TextView
        android:id="@+id/trade_store"
        android:layout_width="80dp"
        android:layout_height="18dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="78dp"
        android:layout_marginTop="285dp"
        android:gravity="center_horizontal|top"
        android:text="@string/trade_store"
        android:textAppearance="@style/trade_store" />

    <ImageButton
        android:id="@+id/btn_trade_store"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="324dp"
        android:layout_marginTop="285dp"
        android:background="@drawable/ic_baseline_arrow_forward_ios_24" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="337dp"
        android:src="@drawable/ic_baseline_credit_card_24" />

    <TextView
        android:id="@+id/payment_method"
        android:layout_width="124dp"
        android:layout_height="18dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="78dp"
        android:layout_marginTop="349dp"
        android:gravity="center_horizontal|top"
        android:text="@string/payment_method"
        android:textAppearance="@style/trade_store" />

    <ImageButton
        android:id="@+id/btn_payment_method"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="324dp"
        android:layout_marginTop="349dp"
        android:background="@drawable/ic_baseline_arrow_forward_ios_24" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="402dp"
        android:src="@drawable/ic_baseline_credit_card_24" />

    <TextView
        android:id="@+id/balance"
        android:layout_width="66dp"
        android:layout_height="18dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="75dp"
        android:layout_marginTop="413dp"
        android:gravity="center_horizontal|top"
        android:text="@string/balance"
        android:textAppearance="@style/trade_store" />

    <TextView
        android:id="@+id/some_id"
        android:layout_width="66dp"
        android:layout_height="18dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="278dp"
        android:layout_marginTop="414dp"
        android:gravity="center_horizontal|top"
        android:text="@string/some_id"
        android:textAppearance="@style/trade_store" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="467dp"
        android:src="@drawable/ic_baseline_credit_card_24" />

    <TextView
        android:id="@+id/trade_history"
        android:layout_width="91dp"
        android:layout_height="18dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="76dp"
        android:layout_marginTop="477dp"
        android:gravity="center_horizontal|top"
        android:text="@string/trade_history"
        android:textAppearance="@style/trade_store" />

    <ImageButton
        android:id="@+id/btn_trade_history"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="324dp"
        android:layout_marginTop="477dp"
        android:background="@drawable/ic_baseline_arrow_forward_ios_24" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="527dp"
        android:src="@drawable/icon_refresh" />

    <TextView
        android:id="@+id/restore_purchase"
        android:layout_width="124dp"
        android:layout_height="18dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="72dp"
        android:layout_marginTop="538dp"
        android:gravity="center_horizontal|top"
        android:text="@string/restore_purchase"
        android:textAppearance="@style/trade_store" />

    <ImageButton
        android:id="@+id/btn_restore_purchase"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="324dp"
        android:layout_marginTop="538dp"
        android:background="@drawable/ic_baseline_arrow_forward_ios_24" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="587dp"
        android:src="@drawable/ic_outline_help_outline_24" />

    <TextView
        android:id="@+id/help"
        android:layout_width="33dp"
        android:layout_height="18dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="75dp"
        android:layout_marginTop="598dp"
        android:gravity="center_horizontal|top"
        android:text="@string/help"
        android:textAppearance="@style/trade_store" />

    <ImageButton
        android:id="@+id/btn_logout"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="32dp"
        android:layout_marginTop="647dp"
        android:background="@drawable/ic_logout" />

    <TextView
        android:id="@+id/logout"
        android:layout_width="66dp"
        android:layout_height="18dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="68dp"
        android:layout_marginTop="658dp"
        android:gravity="center_horizontal|top"
        android:text="@string/logout"
        android:textAppearance="@style/trade_store" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>